Fixed overlay z-index

--- a/src/components/ActionsPanel/View/styles/ActionsPanelView.styl
+++ b/src/components/ActionsPanel/View/styles/ActionsPanelView.styl
@@ -1,1 +1,6 @@
 @import '~src/global'
+
+.actions-panel
+    @media MOBILE
+        z-index: 1
+        position: relative
