--- a/src/components/LoadingSpinner/View/styles/LoadingSpinnerView.styl
+++ b/src/components/LoadingSpinner/View/styles/LoadingSpinnerView.styl
@@ -9,6 +9,7 @@
         box-shadow: 1px 1px 0px LCD_SHADOWCOLOR, 1px 1px 0px LCD_SHADOWCOLOR inset
         margin-bottom: 20px
     &-wrapper
+        z-index: 9
         @media MOBILE
             display: none
             position: fixed
