--- a/src/components/ResourceInfo/View/styles/ResourceInfoView.styl
+++ b/src/components/ResourceInfo/View/styles/ResourceInfoView.styl
@@ -14,7 +14,6 @@
     left: 0
     width: 100%
     display: flex
-    z-index: -1
     &__description
         color: inherit
         font-size: inherit
